fixed button spacing

--- a/msa-react/src/App.css
+++ b/msa-react/src/App.css
@@ -245,7 +245,7 @@ RESOURCES AND DONATION
     padding-bottom: 7vh;
 }
 
-.resources-pray, .resources-restaurants, .resources-delivery {
+.resources-restaurants, .resources-delivery {
     margin-left: 5vw;
 }
 
